static/css/style.css
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

body {
    line-height:1;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
    display:block;
}

nav ul {
    list-style:none;
}

blockquote, q {
    quotes:none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content:'';
    content:none;
}

a {
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

/* change colours to suit your needs */
ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}

/* change colours to suit your needs */
mark {
    background-color:#ff9;
    color:#000;
    font-style:italic;
    font-weight:bold;
}

del {
    text-decoration: line-through;
}

abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}

table {
    border-collapse:collapse;
    border-spacing:0;
}

/* change border colour to suit your needs */
hr {
    display:block;
    height:1px;
    border:0;
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}

input, select {
    vertical-align:middle;
}

textarea:focus, input:focus{
    outline: 0;
}

/*--------------------------------------*/

.clearfix:after {
  content:"";
  display:table;
  clear:both;
}

.floatL { float: left !important; }
.floatR { float: right !important; }

.disp-blk { display: block !important; }
.disp-none { display: none !important; }
.disp-inline { display: inline !important; }
.opacity0 { opacity: 0 !important; }
.opacity100 { opacity: 100 !important; }

.mg10 { margin: 10px !important; }
.mg20 { margin: 20px !important; }

.pad10 { padding: 10px !important; }
.pad20 { padding: 20px !important; }

.mt5 { margin-top: 5px !important; }
.mt10 { margin-top: 10px !important; }
.mt20 { margin-top: 20px !important; }
.mb5 { margin-bottom: 5px !important; }
.mb10 { margin-bottom: 10px !important; }
.mb20 { margin-bottom: 20px !important; }

.bg-white { background-color: white !important; }
.bg-black { background-color: black !important; }

.brad5 { border-radius: 5px !important; }
.brad10 { border-radius: 10px !important; }
.brad20 { border-radius: 20px !important; }

.container1250 { width: 1250px; position: relative; top: 0; left: 50%; margin-left: -625px; }

.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.no-border-left { border-left: none !important; }
.no-border-right { border-right: none !important; }
.no-border-top { border-top: none !important; }
.no-border-bottom { border-bottom: none !important; }

.no-margin-left { margin-left: 0 !important; }
.no-margin-right { margin-right: 0 !important; }
.no-margin-top { margin-top: 0 !important; }
.no-margin-bottom { margin-bottom: 0 !important; }

.ta-left { text-align: left !important; }
.ta-right { text-align: right !important; }
.ta-center { text-align: center !important; }
.ta-just { text-align: justify !important; }


@import url(http://fonts.googleapis.com/css?family=Noto+Sans);
html, body { width: 100vw; height: 100vh; font-family: 'Noto Sans', sans-serif; }
div.password { width: 100vw; height: 100vh; position: fixed; top: 0; left: 0; background-color: #ff0064; z-index: 100; }
body.out div.password { background-color: #00aacd; }
div.password div.caption { margin-top: calc(50vh - 65vw); font-size: 4vw; height: 4vw; line-height: 4vw; text-align: center; color: white; width: 100%;  }
div.password div.dots { width: 40vw; height: calc(3vw + 4px); margin-top: 10vw; margin-left: calc(33.5vw - 8px);}
div.password div.dots div.dot { width: 3vw; height: 3vw; margin-right: 7vw; border-radius: 3vw; border: 2px solid white; float: left; transition: background-color: .1s; }
div.password div.dots div.dot.filled { background-color: white; }
div.password div.dots div.dot4 { margin-right: 0; }
div.password div.keypad { width: 100%; margin-top: 15vw; }
div.password div.keypad div.row { margin: 8vw 0 0 calc(15vw - 9px); }
div.password div.keypad div.btn { width: 18vw; height: 18vw; border-radius: 18vw; font-size: 4vw; color: white; border: 3px solid white; float: left; line-height: 18vw; text-align: center; margin-right: 8vw; transition: background-color .2s, color .2s; }
div.password div.keypad div.row4 div.btn-num { margin-left: calc(26vw + 6px); }
div.password div.keypad div.row4 div.btn-cancel { border: 0px none; padding-left: 3px; font-size: 4vw; }
div.password div.keypad.free div.btn-num:active { background-color: white; color: #ff0064; transition: background-color 0s, color 0s; 
}
body.out div.password div.keypad.free div.btn-num:active { color: #00aacd; }
div.password div.keypad.lock { opacity: .5; }
div.logtime { width: 60vw; height: 10vw; line-height: 10vw; border-radius: 10px; text-align: center; background-color: #ff0064; color: white; font-size: 4vw; transition: background-color 1s, opacity .3s; margin-left: 20vw; position: absolute; bottom: 15vw; left: 0; }
body.out div.logtime { background-color: #00aacd; }
div.logtime.disabled { opacity: .5; }
div.logtime.tempdisabled { opacity: .5; }
div.logo-placeholder { width: 100%; height: 20vw; }
div.logo { width: 38vw; background-color: #ff0064; margin-left: 31vw; text-align: center; transition: background-color 1s; height: 38vw; }
body.out div.logo { background-color: #00aacd; }
div.logo img { width: 40vw; height: 40vw; position: relative; top: -1vw; left: -1vw; }
div.statusplaceholder { width: 100%; height: 60px; position: absolute; top: 0; left: 0; background-color: #ff0064; z-index: 10; transition: background-color 1s; }
div.notif { width: 100%; height: 10vw; line-height: 10vw; text-align: center; padding-top: 60px; background-color: #ff0064; color: white; position: fixed; top: -10vw; left: 0; z-index: 3; transition: background-color 1s; font-size: 4vw; }
body.out div.statusplaceholder { background-color: #00aacd; }
body.out div.notif { background-color: #00aacd; }
div.data { margin-top: 10vw; padding: 10vw 5vw; width: 60vw; margin-left: 15vw; border-radius: 10vw; color: #ff0064; transition: color 1s; }
body.out div.data { color: #00aacd; }
div.timer { font-size: 8vw; text-align: center; height: 12vw; line-height: 10vw; border-bottom: 1vw dotted #ff0064; transition: border-color 1s; }
body.out div.timer { border-color: #00aacd; }
div.moneytoday { font-size: 4vw; text-align: right; height: 5vw; line-height: 5vw; margin-top: 4vw; }
div.moneymonth { font-size: 4vw; text-align: right; height: 5vw; line-height: 5vw; margin-top: 4vw; }

